// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Study Area Form renders correctly the empty component correctly 1`] = `
<DocumentFragment>
  <form>
    <div
      class="MuiBox-root MuiBox-root-1"
    >
      <div
        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
        data-testid="location.survey_area_name"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined Mui-required Mui-required"
          data-shrink="false"
          for="location.survey_area_name"
          id="location.survey_area_name-label"
        >
          Survey Area Name
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            id="location.survey_area_name"
            name="location.survey_area_name"
            required=""
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-2 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-4"
            >
              <span>
                Survey Area Name *
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <h3
        class="MuiTypography-root MuiTypography-h5"
      >
        Study Area Boundary
      </h3>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
        style="max-width: 90ch;"
      >
        Import or select a boundary from existing map layers. To select an existing boundary, choose a map layer below and click a boundary on the map.
      </p>
      <div
        class="MuiBox-root MuiBox-root-8"
      >
        <div
          class="MuiBox-root MuiBox-root-9"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-outlinedSizeLarge MuiButton-sizeLarge"
            data-testid="boundary_file-upload"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <span
                class="MuiButton-startIcon MuiButton-iconSizeLarge"
              >
                <svg
                  role="presentation"
                  style="width: 1.5rem; height: 1.5rem;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M2 12H4V17H20V12H22V17C22 18.11 21.11 19 20 19H4C2.9 19 2 18.11 2 17V12M12 2L6.46 7.46L7.88 8.88L11 5.75V15H13V5.75L16.13 8.88L17.55 7.45L12 2Z"
                    style="fill: currentColor;"
                  />
                </svg>
              </span>
              Import Boundary
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <div
            class="MuiBox-root MuiBox-root-10"
          >
            <div
              class="MuiFormControl-root makeStyles-mapLayerControl-7"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-marginDense MuiInputLabel-outlined"
                data-shrink="false"
                id="layer"
              >
                Map Layers
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
              >
                <div
                  aria-haspopup="listbox"
                  aria-label="Layer"
                  aria-labelledby="layer layer"
                  class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
                  id="layer"
                  role="button"
                  tabindex="0"
                >
                  <span>
                    ​
                  </span>
                </div>
                <input
                  aria-hidden="true"
                  class="MuiSelect-nativeInput"
                  name="layer"
                  tabindex="-1"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root-2 MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="PrivateNotchedOutline-legendLabelled-4"
                  >
                    <span>
                      Map Layers
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root-11"
          />
        </div>
      </div>
      <div
        class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded"
      >
        <div
          class="MuiBox-root MuiBox-root-12"
        >
          <div
            class="leaflet-container leaflet-touch leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
            id="study_area_form_map"
            style="height: 100%; position: relative;"
            tabindex="0"
          >
            <div
              class="leaflet-pane leaflet-map-pane"
              style="left: 0px; top: 0px;"
            >
              <div
                class="leaflet-pane leaflet-tile-pane"
              >
                <div
                  class="leaflet-layer "
                  style="z-index: 2;"
                >
                  <div
                    class="leaflet-tile-container leaflet-zoom-animated"
                    style="z-index: 18; left: 0px; top: 0px;"
                  >
                    <img
                      alt=""
                      class="leaflet-tile"
                      src="https://server.arcgisonline.com/ArcGIS/rest/services/World_Topo_Map/MapServer/tile/5/10/4"
                      style="width: 256px; height: 256px; left: -159px; top: -31px;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="leaflet-pane leaflet-overlay-pane"
              />
              <div
                class="leaflet-pane leaflet-shadow-pane"
              />
              <div
                class="leaflet-pane leaflet-marker-pane"
              />
              <div
                class="leaflet-pane leaflet-tooltip-pane"
              />
              <div
                class="leaflet-pane leaflet-popup-pane"
              />
            </div>
            <div
              class="leaflet-control-container"
            >
              <div
                class="leaflet-top leaflet-left"
              >
                <div
                  class="leaflet-control-zoom leaflet-bar leaflet-control"
                >
                  <a
                    aria-disabled="false"
                    aria-label="Zoom in"
                    class="leaflet-control-zoom-in"
                    href="#"
                    role="button"
                    title="Zoom in"
                  >
                    <span
                      aria-hidden="true"
                    >
                      +
                    </span>
                  </a>
                  <a
                    aria-disabled="false"
                    aria-label="Zoom out"
                    class="leaflet-control-zoom-out"
                    href="#"
                    role="button"
                    title="Zoom out"
                  >
                    <span
                      aria-hidden="true"
                    >
                      −
                    </span>
                  </a>
                </div>
                <div
                  class="leaflet-control-fullscreen leaflet-bar leaflet-control"
                >
                  <a
                    class="leaflet-control-fullscreen-button leaflet-bar-part"
                    href="#"
                    title="View Fullscreen"
                  />
                </div>
              </div>
              <div
                class="leaflet-top leaflet-right"
              >
                <div
                  class="leaflet-draw leaflet-control"
                >
                  <div
                    class="leaflet-draw-section"
                  >
                    <div
                      class="leaflet-draw-toolbar leaflet-bar leaflet-draw-toolbar-top"
                    >
                      <a
                        class="leaflet-draw-draw-polygon"
                        href="#"
                        title="Draw a polygon"
                      >
                        <span
                          class="sr-only"
                        >
                          Draw a polygon
                        </span>
                      </a>
                      <a
                        class="leaflet-draw-draw-rectangle"
                        href="#"
                        title="Draw a rectangle"
                      >
                        <span
                          class="sr-only"
                        >
                          Draw a rectangle
                        </span>
                      </a>
                      <a
                        class="leaflet-draw-draw-marker"
                        href="#"
                        title="Draw a marker"
                      >
                        <span
                          class="sr-only"
                        >
                          Draw a marker
                        </span>
                      </a>
                    </div>
                    <ul
                      class="leaflet-draw-actions"
                    />
                  </div>
                  <div
                    class="leaflet-draw-section"
                  >
                    <div
                      class="leaflet-draw-toolbar leaflet-bar"
                    >
                      <a
                        class="leaflet-draw-edit-edit leaflet-disabled"
                        href="#"
                        title="No layers to edit"
                      >
                        <span
                          class="sr-only"
                        >
                          Edit layers
                        </span>
                      </a>
                      <a
                        class="leaflet-draw-edit-remove leaflet-disabled"
                        href="#"
                        title="No layers to delete"
                      >
                        <span
                          class="sr-only"
                        >
                          Delete layers
                        </span>
                      </a>
                    </div>
                    <ul
                      class="leaflet-draw-actions"
                    />
                  </div>
                </div>
              </div>
              <div
                class="leaflet-bottom leaflet-left"
              />
              <div
                class="leaflet-bottom leaflet-right"
              >
                <div
                  aria-haspopup="true"
                  class="leaflet-control-layers leaflet-control"
                >
                  <a
                    class="leaflet-control-layers-toggle"
                    href="#"
                    role="button"
                    title="Layers"
                  />
                  <section
                    class="leaflet-control-layers-list"
                  >
                    <div
                      class="leaflet-control-layers-base"
                    >
                      <label>
                        <span>
                          <input
                            class="leaflet-control-layers-selector"
                            name="leaflet-base-layers_44"
                            type="radio"
                          />
                          <span>
                             BC Government
                          </span>
                        </span>
                      </label>
                      <label>
                        <span>
                          <input
                            checked="checked"
                            class="leaflet-control-layers-selector"
                            name="leaflet-base-layers_44"
                            type="radio"
                          />
                          <span>
                             Esri Imagery
                          </span>
                        </span>
                      </label>
                    </div>
                    <div
                      class="leaflet-control-layers-separator"
                      style="display: none;"
                    />
                    <div
                      class="leaflet-control-layers-overlays"
                    />
                  </section>
                </div>
                <div
                  class="leaflet-control-attribution leaflet-control"
                >
                  <a
                    href="https://leafletjs.com"
                    title="A JavaScript library for interactive maps"
                  >
                    <svg
                      aria-hidden="true"
                      class="leaflet-attribution-flag"
                      height="8"
                      viewBox="0 0 12 8"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h12v4H0z"
                        fill="#4C7BE1"
                      />
                      <path
                        d="M0 4h12v3H0z"
                        fill="#FFD500"
                      />
                      <path
                        d="M0 7h12v1H0z"
                        fill="#E0BC00"
                      />
                    </svg>
                     Leaflet
                  </a>
                   
                  <span
                    aria-hidden="true"
                  >
                    |
                  </span>
                   © 
                  <a
                    href="https://www.esri.com/en-us/arcgis/products/location-services/services/basemaps"
                  >
                    ESRI Basemap
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`Study Area Form renders correctly the filled component correctly 1`] = `
<DocumentFragment>
  <form>
    <div
      class="MuiBox-root MuiBox-root-13"
    >
      <div
        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
        data-testid="location.survey_area_name"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
          data-shrink="true"
          for="location.survey_area_name"
          id="location.survey_area_name-label"
        >
          Survey Area Name
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            id="location.survey_area_name"
            name="location.survey_area_name"
            required=""
            type="text"
            value="Study area name"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-14 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-16 PrivateNotchedOutline-legendNotched-17"
            >
              <span>
                Survey Area Name *
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <h3
        class="MuiTypography-root MuiTypography-h5"
      >
        Study Area Boundary
      </h3>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
        style="max-width: 90ch;"
      >
        Import or select a boundary from existing map layers. To select an existing boundary, choose a map layer below and click a boundary on the map.
      </p>
      <div
        class="MuiBox-root MuiBox-root-20"
      >
        <div
          class="MuiBox-root MuiBox-root-21"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-outlinedSizeLarge MuiButton-sizeLarge"
            data-testid="boundary_file-upload"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <span
                class="MuiButton-startIcon MuiButton-iconSizeLarge"
              >
                <svg
                  role="presentation"
                  style="width: 1.5rem; height: 1.5rem;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M2 12H4V17H20V12H22V17C22 18.11 21.11 19 20 19H4C2.9 19 2 18.11 2 17V12M12 2L6.46 7.46L7.88 8.88L11 5.75V15H13V5.75L16.13 8.88L17.55 7.45L12 2Z"
                    style="fill: currentColor;"
                  />
                </svg>
              </span>
              Import Boundary
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <div
            class="MuiBox-root MuiBox-root-22"
          >
            <div
              class="MuiFormControl-root makeStyles-mapLayerControl-19"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-marginDense MuiInputLabel-outlined"
                data-shrink="false"
                id="layer"
              >
                Map Layers
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
              >
                <div
                  aria-haspopup="listbox"
                  aria-label="Layer"
                  aria-labelledby="layer layer"
                  class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
                  id="layer"
                  role="button"
                  tabindex="0"
                >
                  <span>
                    ​
                  </span>
                </div>
                <input
                  aria-hidden="true"
                  class="MuiSelect-nativeInput"
                  name="layer"
                  tabindex="-1"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root-14 MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="PrivateNotchedOutline-legendLabelled-16"
                  >
                    <span>
                      Map Layers
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root-23"
          />
        </div>
      </div>
      <div
        class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded"
      >
        <div
          class="MuiBox-root MuiBox-root-24"
        >
          <div
            class="leaflet-container leaflet-touch leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
            id="study_area_form_map"
            style="height: 100%; position: relative;"
            tabindex="0"
          >
            <div
              class="leaflet-pane leaflet-map-pane"
              style="left: 0px; top: 0px;"
            >
              <div
                class="leaflet-pane leaflet-tile-pane"
              >
                <div
                  class="leaflet-layer "
                  style="z-index: 2;"
                >
                  <div
                    class="leaflet-tile-container leaflet-zoom-animated"
                    style="z-index: 18; left: 0px; top: 0px;"
                  >
                    <img
                      alt=""
                      class="leaflet-tile"
                      src="https://server.arcgisonline.com/ArcGIS/rest/services/World_Topo_Map/MapServer/tile/5/10/4"
                      style="width: 256px; height: 256px; left: -159px; top: -31px;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="leaflet-pane leaflet-overlay-pane"
              />
              <div
                class="leaflet-pane leaflet-shadow-pane"
              >
                <img
                  alt=""
                  class="leaflet-marker-shadow leaflet-zoom-hide"
                  src="marker-shadow.png"
                  style="margin-left: -12px; margin-top: -41px; width: 41px; height: 41px; left: 5771px; top: 1274px;"
                />
              </div>
              <div
                class="leaflet-pane leaflet-marker-pane"
              >
                <img
                  alt="Marker"
                  class="leaflet-marker-icon leaflet-zoom-hide leaflet-interactive"
                  role="button"
                  src="marker-icon.png"
                  style="margin-left: -12px; margin-top: -41px; width: 25px; height: 41px; left: 5771px; top: 1274px; z-index: 1274;"
                  tabindex="0"
                />
              </div>
              <div
                class="leaflet-pane leaflet-tooltip-pane"
              />
              <div
                class="leaflet-pane leaflet-popup-pane"
              />
            </div>
            <div
              class="leaflet-control-container"
            >
              <div
                class="leaflet-top leaflet-left"
              >
                <div
                  class="leaflet-control-zoom leaflet-bar leaflet-control"
                >
                  <a
                    aria-disabled="false"
                    aria-label="Zoom in"
                    class="leaflet-control-zoom-in"
                    href="#"
                    role="button"
                    title="Zoom in"
                  >
                    <span
                      aria-hidden="true"
                    >
                      +
                    </span>
                  </a>
                  <a
                    aria-disabled="false"
                    aria-label="Zoom out"
                    class="leaflet-control-zoom-out"
                    href="#"
                    role="button"
                    title="Zoom out"
                  >
                    <span
                      aria-hidden="true"
                    >
                      −
                    </span>
                  </a>
                </div>
                <div
                  class="leaflet-control-fullscreen leaflet-bar leaflet-control"
                >
                  <a
                    class="leaflet-control-fullscreen-button leaflet-bar-part"
                    href="#"
                    title="View Fullscreen"
                  />
                </div>
              </div>
              <div
                class="leaflet-top leaflet-right"
              >
                <div
                  class="leaflet-draw leaflet-control"
                >
                  <div
                    class="leaflet-draw-section"
                  >
                    <div
                      class="leaflet-draw-toolbar leaflet-bar leaflet-draw-toolbar-top"
                    >
                      <a
                        class="leaflet-draw-draw-polygon"
                        href="#"
                        title="Draw a polygon"
                      >
                        <span
                          class="sr-only"
                        >
                          Draw a polygon
                        </span>
                      </a>
                      <a
                        class="leaflet-draw-draw-rectangle"
                        href="#"
                        title="Draw a rectangle"
                      >
                        <span
                          class="sr-only"
                        >
                          Draw a rectangle
                        </span>
                      </a>
                      <a
                        class="leaflet-draw-draw-marker"
                        href="#"
                        title="Draw a marker"
                      >
                        <span
                          class="sr-only"
                        >
                          Draw a marker
                        </span>
                      </a>
                    </div>
                    <ul
                      class="leaflet-draw-actions"
                    />
                  </div>
                  <div
                    class="leaflet-draw-section"
                  >
                    <div
                      class="leaflet-draw-toolbar leaflet-bar"
                    >
                      <a
                        class="leaflet-draw-edit-edit"
                        href="#"
                        title="Edit layers"
                      >
                        <span
                          class="sr-only"
                        >
                          Edit layers
                        </span>
                      </a>
                      <a
                        class="leaflet-draw-edit-remove"
                        href="#"
                        title="Delete layers"
                      >
                        <span
                          class="sr-only"
                        >
                          Delete layers
                        </span>
                      </a>
                    </div>
                    <ul
                      class="leaflet-draw-actions"
                    />
                  </div>
                </div>
              </div>
              <div
                class="leaflet-bottom leaflet-left"
              />
              <div
                class="leaflet-bottom leaflet-right"
              >
                <div
                  aria-haspopup="true"
                  class="leaflet-control-layers leaflet-control"
                >
                  <a
                    class="leaflet-control-layers-toggle"
                    href="#"
                    role="button"
                    title="Layers"
                  />
                  <section
                    class="leaflet-control-layers-list"
                  >
                    <div
                      class="leaflet-control-layers-base"
                    >
                      <label>
                        <span>
                          <input
                            class="leaflet-control-layers-selector"
                            name="leaflet-base-layers_73"
                            type="radio"
                          />
                          <span>
                             BC Government
                          </span>
                        </span>
                      </label>
                      <label>
                        <span>
                          <input
                            checked="checked"
                            class="leaflet-control-layers-selector"
                            name="leaflet-base-layers_73"
                            type="radio"
                          />
                          <span>
                             Esri Imagery
                          </span>
                        </span>
                      </label>
                    </div>
                    <div
                      class="leaflet-control-layers-separator"
                      style="display: none;"
                    />
                    <div
                      class="leaflet-control-layers-overlays"
                    />
                  </section>
                </div>
                <div
                  class="leaflet-control-attribution leaflet-control"
                >
                  <a
                    href="https://leafletjs.com"
                    title="A JavaScript library for interactive maps"
                  >
                    <svg
                      aria-hidden="true"
                      class="leaflet-attribution-flag"
                      height="8"
                      viewBox="0 0 12 8"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h12v4H0z"
                        fill="#4C7BE1"
                      />
                      <path
                        d="M0 4h12v3H0z"
                        fill="#FFD500"
                      />
                      <path
                        d="M0 7h12v1H0z"
                        fill="#E0BC00"
                      />
                    </svg>
                     Leaflet
                  </a>
                   
                  <span
                    aria-hidden="true"
                  >
                    |
                  </span>
                   © 
                  <a
                    href="https://www.esri.com/en-us/arcgis/products/location-services/services/basemaps"
                  >
                    ESRI Basemap
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root-25"
          >
            <button
              aria-label="zoom to initial extent"
              class="MuiButtonBase-root MuiIconButton-root makeStyles-zoomToBoundaryExtentBtn-18"
              tabindex="0"
              title="Zoom to initial extent"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  role="presentation"
                  style="width: 1.5rem; height: 1.5rem;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17.65,6.35C16.2,4.9 14.21,4 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20C15.73,20 18.84,17.45 19.73,14H17.65C16.83,16.33 14.61,18 12,18A6,6 0 0,1 6,12A6,6 0 0,1 12,6C13.66,6 15.14,6.69 16.22,7.78L13,11H20V4L17.65,6.35Z"
                    style="fill: currentColor;"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`Study Area Form renders correctly when errors exist 1`] = `
<DocumentFragment>
  <form>
    <div
      class="MuiBox-root MuiBox-root-26"
    >
      <div
        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
        data-testid="location.survey_area_name"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-error Mui-error MuiFormLabel-filled Mui-required Mui-required"
          data-shrink="true"
          for="location.survey_area_name"
          id="location.survey_area_name-label"
        >
          Survey Area Name
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk Mui-error Mui-error"
          >
             *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root Mui-error Mui-error MuiInputBase-fullWidth MuiInputBase-formControl"
        >
          <input
            aria-describedby="location.survey_area_name-helper-text"
            aria-invalid="true"
            class="MuiInputBase-input MuiOutlinedInput-input"
            id="location.survey_area_name"
            name="location.survey_area_name"
            required=""
            type="text"
            value="Study area name"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-27 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-29 PrivateNotchedOutline-legendNotched-30"
            >
              <span>
                Survey Area Name *
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error MuiFormHelperText-filled Mui-required"
          id="location.survey_area_name-helper-text"
        >
          error on survey area name field
        </p>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <h3
        class="MuiTypography-root MuiTypography-h5"
      >
        Study Area Boundary
      </h3>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
        style="max-width: 90ch;"
      >
        Import or select a boundary from existing map layers. To select an existing boundary, choose a map layer below and click a boundary on the map.
      </p>
      <div
        class="MuiBox-root MuiBox-root-33"
      >
        <div
          class="MuiBox-root MuiBox-root-34"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-outlinedSizeLarge MuiButton-sizeLarge"
            data-testid="boundary_file-upload"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <span
                class="MuiButton-startIcon MuiButton-iconSizeLarge"
              >
                <svg
                  role="presentation"
                  style="width: 1.5rem; height: 1.5rem;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M2 12H4V17H20V12H22V17C22 18.11 21.11 19 20 19H4C2.9 19 2 18.11 2 17V12M12 2L6.46 7.46L7.88 8.88L11 5.75V15H13V5.75L16.13 8.88L17.55 7.45L12 2Z"
                    style="fill: currentColor;"
                  />
                </svg>
              </span>
              Import Boundary
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <div
            class="MuiBox-root MuiBox-root-35"
          >
            <div
              class="MuiFormControl-root makeStyles-mapLayerControl-32"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-marginDense MuiInputLabel-outlined"
                data-shrink="false"
                id="layer"
              >
                Map Layers
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
              >
                <div
                  aria-haspopup="listbox"
                  aria-label="Layer"
                  aria-labelledby="layer layer"
                  class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
                  id="layer"
                  role="button"
                  tabindex="0"
                >
                  <span>
                    ​
                  </span>
                </div>
                <input
                  aria-hidden="true"
                  class="MuiSelect-nativeInput"
                  name="layer"
                  tabindex="-1"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root-27 MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="PrivateNotchedOutline-legendLabelled-29"
                  >
                    <span>
                      Map Layers
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root-36"
          />
        </div>
      </div>
      <div
        class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded"
      >
        <div
          class="MuiBox-root MuiBox-root-37"
        >
          <div
            class="leaflet-container leaflet-touch leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
            id="study_area_form_map"
            style="height: 100%; position: relative;"
            tabindex="0"
          >
            <div
              class="leaflet-pane leaflet-map-pane"
              style="left: 0px; top: 0px;"
            >
              <div
                class="leaflet-pane leaflet-tile-pane"
              >
                <div
                  class="leaflet-layer "
                  style="z-index: 2;"
                >
                  <div
                    class="leaflet-tile-container leaflet-zoom-animated"
                    style="z-index: 18; left: 0px; top: 0px;"
                  >
                    <img
                      alt=""
                      class="leaflet-tile"
                      src="https://server.arcgisonline.com/ArcGIS/rest/services/World_Topo_Map/MapServer/tile/5/10/4"
                      style="width: 256px; height: 256px; left: -159px; top: -31px;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="leaflet-pane leaflet-overlay-pane"
              />
              <div
                class="leaflet-pane leaflet-shadow-pane"
              >
                <img
                  alt=""
                  class="leaflet-marker-shadow leaflet-zoom-hide"
                  src="marker-shadow.png"
                  style="margin-left: -12px; margin-top: -41px; width: 41px; height: 41px; left: 5771px; top: 1274px;"
                />
              </div>
              <div
                class="leaflet-pane leaflet-marker-pane"
              >
                <img
                  alt="Marker"
                  class="leaflet-marker-icon leaflet-zoom-hide leaflet-interactive"
                  role="button"
                  src="marker-icon.png"
                  style="margin-left: -12px; margin-top: -41px; width: 25px; height: 41px; left: 5771px; top: 1274px; z-index: 1274;"
                  tabindex="0"
                />
              </div>
              <div
                class="leaflet-pane leaflet-tooltip-pane"
              />
              <div
                class="leaflet-pane leaflet-popup-pane"
              />
            </div>
            <div
              class="leaflet-control-container"
            >
              <div
                class="leaflet-top leaflet-left"
              >
                <div
                  class="leaflet-control-zoom leaflet-bar leaflet-control"
                >
                  <a
                    aria-disabled="false"
                    aria-label="Zoom in"
                    class="leaflet-control-zoom-in"
                    href="#"
                    role="button"
                    title="Zoom in"
                  >
                    <span
                      aria-hidden="true"
                    >
                      +
                    </span>
                  </a>
                  <a
                    aria-disabled="false"
                    aria-label="Zoom out"
                    class="leaflet-control-zoom-out"
                    href="#"
                    role="button"
                    title="Zoom out"
                  >
                    <span
                      aria-hidden="true"
                    >
                      −
                    </span>
                  </a>
                </div>
                <div
                  class="leaflet-control-fullscreen leaflet-bar leaflet-control"
                >
                  <a
                    class="leaflet-control-fullscreen-button leaflet-bar-part"
                    href="#"
                    title="View Fullscreen"
                  />
                </div>
              </div>
              <div
                class="leaflet-top leaflet-right"
              >
                <div
                  class="leaflet-draw leaflet-control"
                >
                  <div
                    class="leaflet-draw-section"
                  >
                    <div
                      class="leaflet-draw-toolbar leaflet-bar leaflet-draw-toolbar-top"
                    >
                      <a
                        class="leaflet-draw-draw-polygon"
                        href="#"
                        title="Draw a polygon"
                      >
                        <span
                          class="sr-only"
                        >
                          Draw a polygon
                        </span>
                      </a>
                      <a
                        class="leaflet-draw-draw-rectangle"
                        href="#"
                        title="Draw a rectangle"
                      >
                        <span
                          class="sr-only"
                        >
                          Draw a rectangle
                        </span>
                      </a>
                      <a
                        class="leaflet-draw-draw-marker"
                        href="#"
                        title="Draw a marker"
                      >
                        <span
                          class="sr-only"
                        >
                          Draw a marker
                        </span>
                      </a>
                    </div>
                    <ul
                      class="leaflet-draw-actions"
                    />
                  </div>
                  <div
                    class="leaflet-draw-section"
                  >
                    <div
                      class="leaflet-draw-toolbar leaflet-bar"
                    >
                      <a
                        class="leaflet-draw-edit-edit"
                        href="#"
                        title="Edit layers"
                      >
                        <span
                          class="sr-only"
                        >
                          Edit layers
                        </span>
                      </a>
                      <a
                        class="leaflet-draw-edit-remove"
                        href="#"
                        title="Delete layers"
                      >
                        <span
                          class="sr-only"
                        >
                          Delete layers
                        </span>
                      </a>
                    </div>
                    <ul
                      class="leaflet-draw-actions"
                    />
                  </div>
                </div>
              </div>
              <div
                class="leaflet-bottom leaflet-left"
              />
              <div
                class="leaflet-bottom leaflet-right"
              >
                <div
                  aria-haspopup="true"
                  class="leaflet-control-layers leaflet-control"
                >
                  <a
                    class="leaflet-control-layers-toggle"
                    href="#"
                    role="button"
                    title="Layers"
                  />
                  <section
                    class="leaflet-control-layers-list"
                  >
                    <div
                      class="leaflet-control-layers-base"
                    >
                      <label>
                        <span>
                          <input
                            class="leaflet-control-layers-selector"
                            name="leaflet-base-layers_98"
                            type="radio"
                          />
                          <span>
                             BC Government
                          </span>
                        </span>
                      </label>
                      <label>
                        <span>
                          <input
                            checked="checked"
                            class="leaflet-control-layers-selector"
                            name="leaflet-base-layers_98"
                            type="radio"
                          />
                          <span>
                             Esri Imagery
                          </span>
                        </span>
                      </label>
                    </div>
                    <div
                      class="leaflet-control-layers-separator"
                      style="display: none;"
                    />
                    <div
                      class="leaflet-control-layers-overlays"
                    />
                  </section>
                </div>
                <div
                  class="leaflet-control-attribution leaflet-control"
                >
                  <a
                    href="https://leafletjs.com"
                    title="A JavaScript library for interactive maps"
                  >
                    <svg
                      aria-hidden="true"
                      class="leaflet-attribution-flag"
                      height="8"
                      viewBox="0 0 12 8"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h12v4H0z"
                        fill="#4C7BE1"
                      />
                      <path
                        d="M0 4h12v3H0z"
                        fill="#FFD500"
                      />
                      <path
                        d="M0 7h12v1H0z"
                        fill="#E0BC00"
                      />
                    </svg>
                     Leaflet
                  </a>
                   
                  <span
                    aria-hidden="true"
                  >
                    |
                  </span>
                   © 
                  <a
                    href="https://www.esri.com/en-us/arcgis/products/location-services/services/basemaps"
                  >
                    ESRI Basemap
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root-38"
          >
            <button
              aria-label="zoom to initial extent"
              class="MuiButtonBase-root MuiIconButton-root makeStyles-zoomToBoundaryExtentBtn-31"
              tabindex="0"
              title="Zoom to initial extent"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  role="presentation"
                  style="width: 1.5rem; height: 1.5rem;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17.65,6.35C16.2,4.9 14.21,4 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20C15.73,20 18.84,17.45 19.73,14H17.65C16.83,16.33 14.61,18 12,18A6,6 0 0,1 6,12A6,6 0 0,1 12,6C13.66,6 15.14,6.69 16.22,7.78L13,11H20V4L17.65,6.35Z"
                    style="fill: currentColor;"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
